<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="7dp">
        <TextView
            android:id="@+id/subtitle"
            android:gravity="center_vertical"
            android:textSize="16dp"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp">
            <TextView
                android:textColor="#000000"
                android:text="@string/location"
                android:textSize="16dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>        
            <TextView
                android:id="@+id/location"
                android:textColor="#000000"
                android:textSize="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp">
            <TextView
                android:textColor="#000000"
                android:text="@string/term"
                android:textStyle="bold"
                android:textSize="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>        
            <TextView
                android:id="@+id/when"
                android:textColor="#000000"
                android:textSize="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp">
            <TextView
                android:textColor="#000000"
                android:text="@string/deadline"
                android:textStyle="bold"
                android:textSize="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>        
            <TextView
                android:id="@+id/deadline"
                android:textColor="#000000"
                android:textSize="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:id="@+id/extend">    
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5dp">
                <TextView
                    android:textColor="#000000"
                    android:text="@string/notification"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>        
                <TextView
                    android:id="@+id/notification"
                    android:autoLink="web"
                    android:textColor="#000000"
                    android:textSize="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>  
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5dp">
                <TextView
                    android:textColor="#000000"
                    android:text="@string/final_version"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>        
                <TextView
                    android:id="@+id/finalVersion"
                    android:autoLink="web"
                    android:textColor="#000000"
                    android:textSize="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>                          
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5dp">
                <TextView
                    android:textColor="#000000"
                    android:text="@string/link"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>        
                <TextView
                    android:id="@+id/link"
                    android:autoLink="web"
                    android:textColor="#000000"
                    android:textSize="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>    
            <TextView
                android:textColor="#000000"
                android:text="@string/categories"
                android:textStyle="bold"
                android:textSize="16dp"
                android:paddingTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>        
            <TextView
                android:id="@+id/categories"
                android:textColor="#000000"
                android:textSize="16dp"
                android:paddingTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="#000000"
                android:text="@string/description"
                android:textStyle="bold"
                android:paddingTop="5dp"
                android:textSize="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>                 
            <TextView
                android:paddingTop="5dp"
                android:paddingLeft="5dp"
                android:id="@+id/description"
                android:autoLink="web|email"
                android:textColor="#000000"
                android:textSize="14dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>          
            <TextView
                android:textColor="#000000"
                android:text="@string/related_cfp"
                android:textStyle="bold"
                android:textSize="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>     
            <TextView
                android:id="@+id/relatedTitle1"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="16dp"
                android:paddingTop="5dp"
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>        
            <TextView
                android:id="@+id/relatedSubtitle1"
                android:textColor="#000000"
                android:textSize="16dp"
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/relatedTitle2"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="16dp"
                android:paddingTop="5dp"
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>        
            <TextView
                android:id="@+id/relatedSubtitle2"
                android:textColor="#000000"
                android:textSize="16dp"
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/relatedTitle3"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="16dp"
                android:paddingTop="5dp"
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>        
            <TextView
                android:id="@+id/relatedSubtitle3"
                android:textColor="#000000"
                android:textSize="16dp"
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>                        
            <TextView
                android:id="@+id/relatedTitle4"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="16dp"
                android:paddingTop="5dp"
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>        
            <TextView
                android:id="@+id/relatedSubtitle4"
                android:textColor="#000000"
                android:textSize="16dp"
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/relatedTitle5"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="16dp"
                android:paddingTop="5dp"
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>        
            <TextView
                android:id="@+id/relatedSubtitle5"
                android:textColor="#000000"
                android:textSize="16dp"
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>                        
            <TextView
                android:id="@+id/relatedTitle6"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="16dp"
                android:paddingTop="5dp"
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>        
            <TextView
                android:id="@+id/relatedSubtitle6"
                android:textColor="#000000"
                android:textSize="16dp"
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>            
        </LinearLayout>
    </LinearLayout>
</ScrollView>

